--- a/index.html
+++ b/index.html
@@ -77,7 +77,6 @@
 		<br />
 		<a href="journals/journey_to_valtfort_and_faighulk.html">Faighulk Drench & Valtfort</a>
 		<br />
-		<a href="journals/journey_to_valtfort_and_faighulk.html">Faighulk Drench & Valtfort</a>
 </div>
 	<div class="column" style="float: left; width: 33.33%;">
 		<span style="text-decoration: underline;"><strong>Regions</strong></span>
@@ -89,7 +88,7 @@
 		<br />
 		<a href="locations/wraithward.html">Wraithward</a>
 		<br />
-		<a href="locations/valtfort.html">valtfort</a>
+		<a href="locations/valtfort.html">Valtfort</a>
 				<br />
 		<a href="locations/faighulk_drench.html">Faighulk Drench</a>
 	</div>
