new journals, new players, dead players

--- a/index.html
+++ b/index.html
@@ -27,10 +27,6 @@
 	<br />										
 	<a href="https://www.dndbeyond.com/profile/Sterling_Phoenix/characters/30097206" target="_blank" rel="noopener">Bedíglian unfúl</a>
 	<br />
-	<a href="https://www.dndbeyond.com/profile/TheGoatIsBetter/characters/29999639" target="_blank" rel="noopener">Negwin "Nenenu" Ne-Nutmidge</a>
-	<br />
-	<a href="https://www.dndbeyond.com/profile/PickleOperator/characters/30212076" target="_blank" rel ="noopener">Filvendor Zinleth</a>
-	<br />
 	<a href="https://www.dndbeyond.com/profile/PuapuSenpai/characters/30278245" target="_blank" rel ="noopener">Arwen Winderfall</a>
 	<br />
 	<a href="https://www.dndbeyond.com/profile/MashadowEnigma/characters/30268637" target="_blank" rel ="noopener">Welkin Drythbearn "Acht"</a>
@@ -38,6 +34,16 @@
 	<a href="https://www.dndbeyond.com/profile/Hyponix/characters/30281601" target="_blank" rel ="noopener">Vidar the Nameless</a>
 	<br />
 	<a href="https://www.dndbeyond.com/profile/BruhBattleBoy/characters/32875978" target="_blank" rel ="noopener">Grethe Doomkiller</a>
+	<br />
+	<a href="https://www.dndbeyond.com/profile/TheGoatIsBetter/characters/33758024" target="_blank" rel="noopener">Gregarius "The Blind One" Venquinel</a>
+	<br />
+	&emsp; - Dead -
+	<br />
+	<a href="https://www.dndbeyond.com/profile/PickleOperator/characters/30212076" target="_blank" rel ="noopener">Filvendor Zinleth</a>
+	<br />
+	<a href="https://www.dndbeyond.com/profile/TheGoatIsBetter/characters/29999639" target="_blank" rel="noopener">Negwin "Nenenu" Ne-Nutmidge</a>
+	<br />
+
 </div>
 									      
 <div class="column" style="float: left; width: 33.33%;">
@@ -77,6 +83,11 @@
 		<br />
 		<a href="journals/journey_to_valtfort_and_faighulk.html">Faighulk Drench & Valtfort</a>
 		<br />
+		<a href="journals/five_missing_in_morkskog.html">Five Missing in Mörkskog</a>
+		<br />
+		<a href="journals/journey_to_thoe_and_garbearn.html">Heath of Ezekiel & Garbearn</a>
+		<br />
+		<a href="journals/dark_elves_in_the_dwemereth_mountains.html">Drow in the Dwemereth Mountains</a>
 </div>
 	<div class="column" style="float: left; width: 33.33%;">
 		<span style="text-decoration: underline;"><strong>Regions</strong></span>
@@ -89,7 +100,7 @@
 		<a href="locations/wraithward.html">Wraithward</a>
 		<br />
 		<a href="locations/valtfort.html">Valtfort</a>
-				<br />
+		<br />
 		<a href="locations/faighulk_drench.html">Faighulk Drench</a>
 	</div>
 </body>
