--- a/journals/journey_to_valtfort_and_faighulk.html
+++ b/journals/journey_to_valtfort_and_faighulk.html
@@ -4,7 +4,7 @@
 <head>
 <link rel="shortcut icon" href="img/icon.ico">
 
-    <title>Brewing Tensions - Dreigoth Wiki</title>
+    <title>Journey to Valtfort & Faighulk - Dreigoth Wiki</title>
     <style>
         body {
 			background-image: url("https://jdeknoblo.github.io/bg_img.jpg");
@@ -20,7 +20,7 @@
 <body>
     <div style="background-color: #fff; border-style: outset; border-radius: px; margin: 20px 0 20px;">
 	<span style="text-align:center;text-decoration: underline;"><a href="https://jdeknoblo.github.io/"><h1>The Dark Realm of Dreigoth Wiki</h1></a></span> 
-		<span style="text-align:center;text-decoration: underline;"><h1>Brewing Tensions</h1></span>
+		<span style="text-align:center;text-decoration: underline;"><h1>Journey to Valtfort & Faighulk</h1></span>
 		<p style=" padding: 20px;">
     Adventurers: Makanar de-Kulmyr, Arwen Winderfall, Bediglian Unfúl, Grethe Doomkiller
 	<br />
