added two quests and 2 players

--- a/index.html
+++ b/index.html
@@ -36,7 +36,10 @@
 	<a href="https://www.dndbeyond.com/profile/BruhBattleBoy/characters/32875978" target="_blank" rel ="noopener">Grethe Doomkiller</a>
 	<br />
 	<a href="https://www.dndbeyond.com/profile/TheGoatIsBetter/characters/33758024" target="_blank" rel="noopener">Gregarius "The Blind One" Venquinel</a>
+		<br />
+	<a href="https://www.dndbeyond.com/profile/Elaric/characters/4548759" target="_blank" rel="noopener">Sadulus The Raised</a>
 	<br />
+	<a href="https://www.dndbeyond.com/profile/Therealgibby/characters/34674165" target="_blank" rel="noopener">Bjørn Arne</a>
 	&emsp; - Dead -
 	<br />
 	<a href="https://www.dndbeyond.com/profile/PickleOperator/characters/30212076" target="_blank" rel ="noopener">Filvendor Zinleth</a>
@@ -88,6 +91,11 @@
 		<a href="journals/journey_to_thoe_and_garbearn.html">Heath of Ezekiel & Garbearn</a>
 		<br />
 		<a href="journals/dark_elves_in_the_dwemereth_mountains.html">Drow in the Dwemereth Mountains</a>
+		<br />
+		<a href="journals/zabrithams_claim.html">Zabritham's Claim</a>
+		<br />
+		<a href="journals/silence_in_braksgog.html"></a>
+		<br />
 </div>
 	<div class="column" style="float: left; width: 33.33%;">
 		<span style="text-decoration: underline;"><strong>Regions</strong></span>
