--- a/journals/dark_elves_in_the_dwemereth_mountains.html
+++ b/journals/dark_elves_in_the_dwemereth_mountains.html
@@ -24,7 +24,11 @@
 		<p style=" padding: 20px;">
     Adventurers: Filvendor Zinleth, Arwen Winderfall, Negwin "Nenenu" Ne-Nutmidge, Makanar De-kulmyr
 	<br />
-	No notes
+	<br />
+	From Makanar de-Kulmyr
+	<br />
+	<br />
+After fighting an undead mage and a skeleton giant, Makanar and his comrades went off to investigate the rumors of Drow in the Dwemereth Mountains. Arwen, Nenenu, Filvendor, and the Lion Man himself spent 11 days on the road going to the Dwarven Fortress, Kherkaldwin. Led by dwarves, they went through Garbearn and up to the fortress. Once inside, they delved deep into the fortress and eventually entered a tunnel where a Purple worm ambushed them. Grabbing Arwen and Nenenu, Makanar threw the two out of the tunnel before the worm came back for a meal. Luckily Filvendor’s natural elven speed got him out of the tunnel and the other two landed unscathed unlike Makanar who took the brunt of a Purple worm attack. After recovering from the attack, the party ran deeper into the fortress, trying to escape the reach of the worm, which they did successfully. They then healed up and continued, crossing a ravine and then finding a group composed of a mind flayer, a crimson knight, a drow, and a stone golem. The mind flayer immediately teleported along with the knight while the drow stayed with the golem to fight. After fighting for some time, the drow priestess decided to use the party’s biggest weakness, Fireball. Nenenu and Filvendor fell along with one of the dwarf guides. Makanar rushed to grab his brother and Arwen since she fell while trying to grab Filvendor, and bolted for the bridge so that he could live with his brother another day… but that wouldn’t happen sadly, as he felt his brother go limp in his arm. Makanar, in denial, kept on running until he physically couldn’t push on. After he stopped, he checked his brother’s pulse, finding Nenenu had died. But luckily, he could save Arwen, which he did. The two rode away from Kherkaldwin in silence, developing a new found hatred for the Dark Elves of the Dwemereth Mountains.
 	<br />
   <br />
   </div>
