--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 		<br />
 		<a href="journals/zabrithams_claim.html">Zabritham's Claim</a>
 		<br />
-		<a href="journals/silence_in_braksgog.html"></a>
+		<a href="journals/silence_in_braksgog.html">Silence in Braksgog</a>
 		<br />
 </div>
 	<div class="column" style="float: left; width: 33.33%;">
