--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@
 	<br />
 	<a href="https://www.dndbeyond.com/profile/Therealgibby/characters/34674165" target="_blank" rel="noopener">Bjørn Arne</a>
 	<br />
+	<a href="https://www.dndbeyond.com/profile/Eldund/characters/36099713" target="_blank" rel="noopener">Emrus Daerdahk</a>
+	<br />
 	&emsp; - Dead -
 	<br />
 	<a href="https://www.dndbeyond.com/profile/PickleOperator/characters/30212076" target="_blank" rel ="noopener">Filvendor Zinleth</a>
