--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html>
 <head>
 <link rel="shortcut icon" href="img/icon.ico">
-    <title>Dreigoth Wiki</title>
+    <title>JJ Deknoblough - Portfolio</title>
     <style>
         body {
-			background-image: url("bg_img.jpg");
+			background-image: url("bg_img.gif");
 			background-color: #660000;
 			margin: 0 auto;
 			padding: 0px;
